gettext: fix ngettext usage
_() should not be used in conjunction with ngettext(),
otherwise it's impossible to properly translate the message into
languages that have multiple plural forms, such as Czech.

Additionally, spice-gtk must use dngettext instead of ngettext,
otherwise the translation strings are searched within a wrong domain.

Fix ngettext usage in usb-device-widget.c and
update the PO files accordingly.

Signed-off-by: Jakub Janků <jjanku@redhat.com>
Acked-by: Frediano Ziglio <fziglio@redhat.com>

--- a/po/de.po
+++ b/po/de.po
@@ -288,12 +288,9 @@ msgstr "Auswahl des USB-Geräts zum Weiterleiten"
 #: src/usb-device-widget.c:393
 #, c-format
 msgid "Select USB devices to redirect (%d free channel)"
-msgstr "Auswahl des USB-Geräts zum Weiterleiten (%d freier Kanal)"
-
-#: src/usb-device-widget.c:394
-#, c-format
-msgid "Select USB devices to redirect (%d free channels)"
-msgstr "Auswahl des USB-Geräts zum Weiterleiten (%d freie Kanäle)"
+msgid_plural "Select USB devices to redirect (%d free channels)"
+msgstr[0] "Auswahl des USB-Geräts zum Weiterleiten (%d freier Kanal)"
+msgstr[1] "Auswahl des USB-Geräts zum Weiterleiten (%d freie Kanäle)"
 
 #: src/usb-device-widget.c:411
 msgid "Redirecting USB Device..."
